# knime-passbolt-py

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRACT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: docx_extract.py  httpbin_e2e.py  pdf_extract.py  secured file.docx
src/knime_passbolt/: __init__.py  _broker.py  _secret.py
tests/: README.md  test_secret_validation.py
